<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:orderInCategory="10"
        android:icon="@drawable/base_ic_menu_home"
        android:title="@string/base_menu_home" />

    <item
        android:id="@+id/nav_gallery"
        android:orderInCategory="100"
        android:icon="@drawable/base_ic_menu_gallery"
        android:title="@string/base_menu_gallery" />

    <item
        android:id="@+id/nav_tools"
        android:orderInCategory="100"
        android:icon="@drawable/base_ic_menu_manage"
        android:title="@string/base_menu_tools" />

    <item
        android:id="@+id/nav_share"
        android:orderInCategory="100"
        android:icon="@drawable/base_ic_menu_share"
        android:title="@string/base_menu_share" />

    <item
        android:id="@+id/nav_send"
        android:orderInCategory="100"
        android:icon="@drawable/base_ic_menu_send"
        android:title="@string/base_menu_send" />

</menu>
