<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="ResourceName">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.surcreak.packidea.homepage.ui.fragment.HomeFragment"
        android:label="@string/base_menu_home"
        tools:layout="@layout/homepage_fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.surcreak.packidea.mainpage.ui.fragment.GalleryFragment"
        android:label="@string/base_menu_gallery"
        tools:layout="@layout/mainpage_fragment_gallery" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.surcreak.packidea.mainpage.ui.fragment.ToolsFragment"
        android:label="@string/base_menu_tools"
        tools:layout="@layout/mainpage_fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.surcreak.packidea.mainpage.ui.fragment.ShareFragment"
        android:label="@string/base_menu_share"
        tools:layout="@layout/mainpage_fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.surcreak.packidea.mainpage.ui.fragment.SendFragment"
        android:label="@string/base_menu_send"
        tools:layout="@layout/mainpage_fragment_send" />
</navigation>